--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
 			"command": "vim.goToNormalMode",
 			"key": "Escape",
 			"when": "editorTextFocus && !vim.inNormalMode"
+		},{
+			"command": "vim.clearInput",
+			"key": "Escape",
+			"when": "editorTextFocus && vim.hasInput"
 		}]
 	}
 }
