--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
 	"files.exclude": {
 		"out": false // set this to true to hide the "out" folder with the compiled JS files
 	},
+	"files.eol": "\n",
 	"search.exclude": {
 		"out": true // set this to false to include "out" folder in search results
 	},
