--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
 		"out": false // set this to true to hide the "out" folder with the compiled JS files
 	},
 	"files.eol": "\n",
+	"files.trimTrailingWhitespace": true,
 	"search.exclude": {
 		"out": true // set this to false to include "out" folder in search results
 	},
